test/1.2/errors/T_ENOSTRUCT.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
method init {
    /// ERROR ENOSTRUCT
    1.foo;
    local int *i;
    /// ERROR ENOSTRUCT
    i->foo;
}
